5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1723_2502.log
== TEST (2019-05-13 22:11:46) 
-- CODE:
n = int((input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:11:48) 
-- CODE:
n = int((input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:11:49) 
-- CODE:
n = int((input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:12:01) 
-- CODE:
n = int((input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:12:20) 
-- CODE:
n = int((input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(n)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:12:39) 
-- CODE:
n = int((input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(n)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:23:27) 
-- CODE:
n = int((input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(n)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:29:27) 
-- CODE:
n = int((input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:30:23) 
-- CODE:
from math import *

n = int((input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 5
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:31:05) 
-- CODE:
n = int(input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:31:19) 
-- CODE:
n = int(input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- EXECUTION TIME:
0.153866
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:00:02) 
-- CODE:
n = int(input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + sqrt(12) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + sqrt(12) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:00:25) 
-- CODE:
n = int(input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (sqrt(12) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:10) 
-- CODE:
n = int(input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:02:15) 
-- CODE:
n = int(input("Numero de repeticoes: "))

i = 0
soma = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- EXECUTION TIME:
0.121517
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:42:30) 
-- CODE:
n = int(input("Numero de repeticoes: "))

soma = 0
i = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:42:36) 
-- CODE:
n = int(input("Numero de repeticoes: "))

soma = 0
i = 0

while(0 < n):
	soma = soma + (12 ** (1/2)) * ((1 / ((2 * i + 1) * (3 ** i)))) * ((-1) ** i)
	i = i + 1
	n = n - 1
print(round(soma, 8))
-- EXECUTION TIME:
0.172442
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
